# OptiqAI

./: .gitignore  LICENSE  README.md  architecture.md  code  requirements.txt  run_gui.py  setup.py  setup_cuda.py
.github/workflows/: tests.yml
css/: about.html  docs.html  index.html  styles.css  web_UI.html
css/js/: script.js
data/train/: metadata.json
data/val/: metadata.json
foaml/: test_pipeline.py
foaml/foaml_2/: propagator_1d.cpp  propagator_1d.py  test_propagator_1d.py
foaml/main/: main.py
foaml/models/: architecture.py
foaml/preprocessing/: preprocessing.py
foaml/tests/: test_pipeline.py
foaml/training/: trainer.py
foaml/utils/: deployment.py  metrics.py  visualization.py
fourierlab/UI/gui/: main_window.py
src/fourierlab/: __init__.py
src/fourierlab/benchmarks/: benchmark_gpu.py
src/fourierlab/core/: __init__.py  data_loader.py  gpu_propagator.py  optical_simulator.py  pattern_generator.py  phase_mask.py  physics_solver.py  preprocessing.py  propagator.py  propagator_factory.py  quantum_operations.py  quantum_optics_calculator.py  quantum_state_analyzer.py  (+5 more)
src/fourierlab/core/rust/: Cargo.toml  build.py
src/fourierlab/core/rust/src/: error.rs  fft_pool.rs  lib.rs  pattern_generation.rs  phase_mask.rs  wave_propagation.rs
src/scripts/: train.py
test_logs/: events.out.tfevents.1746311707.Lenovo.10260.0  events.out.tfevents.1746311779.Lenovo.43812.0
tests/: benchmark_gpu.py  test_advanced_ml.py  test_gui.py  test_inverse_design.py  test_ml_components.py  test_pinn.py  test_quantum_optics.py  test_rust_implementation.py
(+37 files in other folders)
